# music_sync

./: Cargo.toml  config.toml
.github/workflows/: rust.yml
config/: config.toml  platform.toml
src/: app.rs  args.rs  config.rs  database.rs  main.rs  misc.rs  platform.rs
src/database/: mod.rs  spotify.rs
src/database/sql/: create_spotify_auth_cache.sql
src/platform/: mod.rs  spotify.rs
src/platform/spotify/: login.rs  token.rs
src/sql/: create_spotify_auth_cache.sql
