[package]
name = "music_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
parking_lot = "0.12.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.180", features = ["derive"] }
toml = "0.7.6"
