[package]
name = "music_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
hashbrown = "0.14.0"
parking_lot = "0.12.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.180", features = ["derive"] }
toml = "0.7.6"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
soon = { git = "https://github.com/Basicprogrammer10/misc.git" }
