[package]
name = "music_sync"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.8"
hashbrown = "0.14.0"
parking_lot = "0.12.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.180", features = ["derive"] }
toml = "0.7.6"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
soon = { git = "https://github.com/Basicprogrammer10/misc.git" }
derive_more = "0.99.17"
ureq = { version = "2.7.1", features = ["json"] }
afire = "2.2.0"
url-builder = "0.1.1"
rand = "0.8.5"
crossbeam = "0.8.2"
